--- a/src/main/resources/static/song.html
+++ b/src/main/resources/static/song.html
@@ -2,19 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <link rel="stylesheet" href="style.css"/>
     <title>Document</title>
+
 </head>
 <body>
+<h1>멜론 차트</h1>
+<div>인기 순위</div>
 <ul>
     <li>
-        <div>슬픔이어 안녕</div>
+        <div class="song">슬픔이어 안녕</div>
     </li>
     <li>
-        <div>구름타고 멀리 날아</div>
+        <div class="song">구름타고 멀리 날아</div>
     </li>
     <li>
-        <div>Sunny days</div>
+        <div class="song" id="item3">Sunny days</div>
     </li>
 </ul>
 </body>
