--- a/src/main/resources/static/song.html
+++ b/src/main/resources/static/song.html
@@ -1,24 +1,35 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css"/>
-    <title>Document</title>
-
+    <title>Week 03</title>
 </head>
 <body>
 <h1>멜론 차트</h1>
-<div>인기 순위</div>
-<ul>
-    <li>
-        <div class="song">슬픔이어 안녕</div>
-    </li>
-    <li>
-        <div class="song">구름타고 멀리 날아</div>
-    </li>
-    <li>
-        <div class="song" id="item3">Sunny days</div>
-    </li>
-</ul>
+<div class="rankings">인기 순위</div>
+<!--<ul>-->
+<!--    <li>-->
+<!--        <div class="song">Supernova</div>-->
+<!--    </li>-->
+<!--    <li>-->
+<!--        <div class="song">클락션</div>-->
+<!--    </li>-->
+<!--    <li>-->
+<!--        <div class="song" id="item3">How Sweet</div>-->
+<!--    </li>-->
+<!--</ul>-->
+<div class="container"><a href="https://www.youtube.com/results?search_query=노래방+슬픔이어안녕"><img
+        src="https://picsum.photos/600/150?random=1" alt="랜덤 이미지 1">
+    <div class="song-title">슬픔이어 안녕</div>
+</a></div>
+<div class="container"><a href="https://www.youtube.com/results?search_query=노래방+구름타고 멀리날아"><img
+        src="https://picsum.photos/600/150?random=2" alt="랜덤 이미지 2">
+    <div class="song-title">구름타고 멀리날아</div>
+</a></div>
+<div class="container"><a href="https://www.youtube.com/results?search_query=노래방+Sunny days"><img
+        src="https://picsum.photos/600/150?random=3" alt="랜덤 이미지 3">
+    <div class="song-title">Sunny days</div>
+</a></div>
 </body>
 </html>
