🚀 CSS 최종본 수정

--- a/src/main/resources/static/song.html
+++ b/src/main/resources/static/song.html
@@ -20,15 +20,15 @@
 <!--    </li>-->
 <!--</ul>-->
 <div class="container"><a href="https://www.youtube.com/results?search_query=노래방+슬픔이어안녕"><img
-        src="https://picsum.photos/600/150?random=1" alt="랜덤 이미지 1">
+        src="https://image.bugsm.co.kr/album/images/200/40754/4075459.jpg?version=20220601200004.0" alt="랜덤 이미지 1">
     <div class="song-title">슬픔이어 안녕</div>
 </a></div>
 <div class="container"><a href="https://www.youtube.com/results?search_query=노래방+구름타고 멀리날아"><img
-        src="https://picsum.photos/600/150?random=2" alt="랜덤 이미지 2">
+        src="https://image.bugsm.co.kr/album/images/200/204651/20465149.jpg?version=20231026065058.0" alt="랜덤 이미지 2">
     <div class="song-title">구름타고 멀리날아</div>
 </a></div>
 <div class="container"><a href="https://www.youtube.com/results?search_query=노래방+Sunny days"><img
-        src="https://picsum.photos/600/150?random=3" alt="랜덤 이미지 3">
+        src="https://image.bugsm.co.kr/album/images/200/40856/4085672.jpg?version=20240223044241.0" alt="랜덤 이미지 3">
     <div class="song-title">Sunny days</div>
 </a></div>
 </body>
